--- a/福利姬频道总目录/Azami全集/menu.html
+++ b/福利姬频道总目录/Azami全集/menu.html
@@ -10,7 +10,11 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/Azami-Hoshino-Ai-34P-08-23">Azami Hoshino Ai 34P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/Azami---斩赤红之瞳---艾斯德斯54P2V-534MB-08-25">Azami - 斩·赤红之瞳 - 艾斯德斯[54P2V-534MB]</a></p>
+  <p><a href="https://telegra.ph/Azami-Esdeath-53P-348MB-08-25">Azami Esdeath [53P-348MB]</a></p>
+  <p><a href="https://telegra.ph/Azami---Yelan-08-25">Azami - Yelan</a></p>
+  <p><a href="https://telegra.ph/Azami---Yor-26P-232MB-08-25">Azami - Yor [26P-232MB]</a></p>
+  <p><a href="https://telegra.ph/Azami---Veronica-22P-99MB-08-25">Azami - Veronica [22P-99MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
