--- a/福利姬频道总目录/ElyEE子全集/menu.html
+++ b/福利姬频道总目录/ElyEE子全集/menu.html
@@ -13,5 +13,10 @@
   <p><a href="https://telegra.ph/C--Rem-Pajamas-08-25">ElyEE子 C- Rem Pajamas</a></p>
   <p><a href="https://telegra.ph/B---Devil-Croupier-08-25">ElyEE子 B - Devil Croupier</a></p>
   <p><a href="https://telegra.ph/A--Gawr-Gura-Swimsuit-08-25">ElyEE子 A- Gawr Gura Swimsuit</a></p>
+  <p><a href="https://telegra.ph/ElyEE子---Mist-Blue-Lady-08-25">ElyEE子 - Mist Blue Lady</a></p>
+  <p><a href="https://telegra.ph/ElyEE子---agdoll-Cat-Doll-布偶貓少女人形-08-25">ElyEE子 - agdoll Cat Doll 布偶貓少女人形</a></p>
+  <p><a href="https://telegra.ph/ElyEE子-Scottish-Fold-Cat-Doll-摺耳貓少女人形-08-25">ElyEE子 Scottish Fold Cat Doll 摺耳貓少女人形</a></p>
+  <p><a href="https://telegra.ph/ElyEE子---Marin-Kitagawa-56P-122MB-08-25">ElyEE子 - Marin Kitagawa [56P-122MB]</a></p>
+  <p><a href="https://telegra.ph/ElyEE子---Towa-Tokoyami-39P-104MB-08-25">ElyEE子 - Towa Tokoyami [39P-104MB]</a></p>
 </body>
 </html>
