--- a/福利姬频道总目录/usejan(蓝蓝)全集/menu.html
+++ b/福利姬频道总目录/usejan(蓝蓝)全集/menu.html
@@ -6,11 +6,18 @@
 <body>
   <div id="advertise">
     <iframe src="../../advertise.html" frameborder="0" width="100%" height="100"></iframe>
+    <p><a href="../index.html">返回当前频道总目录</a></p>
   </div>
   <hr>
-  <p><a href="../index.html">返回总目录</a></p>
+
   <p><a href="https://telegra.ph/usejan%E8%93%9D%E8%93%9D-%E4%B8%83%E5%A4%95%E5%AD%A6%E5%A6%B9-73P1V-08-22">usejan(蓝蓝) 七夕学妹 73P1V</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/usejan蓝蓝-奶味软糖-40P-75MB-08-25">usejan(蓝蓝) 奶味软糖 [40P-75MB]</a></p>
+  <p><a href="https://telegra.ph/usejan蓝蓝---私语-50P-107MB-08-25">usejan(蓝蓝) - 私语 [50P-107MB]</a></p>
+  <p><a href="https://telegra.ph/usejan蓝蓝---薄纱睡衣-42P-75MB-08-25">usejan(蓝蓝) - 薄纱睡衣 [42P-75MB]</a></p>
+  <p><a href="https://telegra.ph/usejan蓝蓝---粉色创可贴-33P-47MB-08-25">usejan(蓝蓝) - 粉色创可贴 [33P-47MB]</a></p>
+  <p><a href="https://telegra.ph/usejan蓝蓝---等风来-42P-84MB-08-25">usejan(蓝蓝) - 等风来 [42P-84MB]</a></p>
+  <p><a href="https://telegra.ph/usejan蓝蓝---黑兔-33P-89MB-08-25">usejan(蓝蓝) - 黑兔 [33P-89MB]</a></p>
+  <p><a href="https://telegra.ph/usejan蓝蓝---小厨娘-46P-134MB-08-25">usejan(蓝蓝) - 小厨娘 [46P-134MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
