--- a/福利姬频道总目录/五更百鬼全集/menu.html
+++ b/福利姬频道总目录/五更百鬼全集/menu.html
@@ -12,5 +12,14 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E4%BA%94%E6%9B%B4%E7%99%BE%E9%AC%BC---2025-2%E6%9C%88%E8%88%B0%E9%95%BF%E5%9B%BE-03-22">五更百鬼 - 2025 2月舰长图</a></p>
   <p><a href="https://telegra.ph/%E4%BA%94%E6%9B%B4%E7%99%BE%E9%AC%BC---2024-9%E6%9C%88%E8%88%B0%E9%95%BF%E5%9B%BE-08-19">五更百鬼 - 2024 9月舰长图</a></p>
+  <p><a href="https://telegra.ph/五更百鬼-女巫-14P-330MB-08-24">五更百鬼 女巫 [14P-330MB]</a></p>
+  <p><a href="https://telegra.ph/五更百鬼-能代女仆-18P-430MB-08-24">五更百鬼 能代女仆 [18P-430MB]</a></p>
+  <p><a href="https://telegra.ph/五更百鬼-OTS-14旗袍38P-384MB-08-25">五更百鬼 OTS-14旗袍[38P-384MB]</a></p>
+  <p><a href="https://telegra.ph/五更百鬼-樱岛麻衣兔女郎-38P-389MB-08-25">五更百鬼 樱岛麻衣兔女郎 [38P-389MB]</a></p>
+  <p><a href="https://telegra.ph/五更百鬼-性感猫娘-42P-894MB-08-25">五更百鬼 性感猫娘 [42P-894MB]</a></p>
+  <p><a href="https://telegra.ph/五更百鬼-女仆-31P-50MB-08-25">五更百鬼 女仆 [31P-50MB]</a></p>
+  <p><a href="https://telegra.ph/五更百鬼-黑白-96P-126GB-08-25">五更百鬼 黑白 [96P-1.26GB]</a></p>
+  <p><a href="https://telegra.ph/五更百鬼-阿狸护士服-37P-174MB-08-25">五更百鬼 阿狸护士服 [37P-174MB]</a></p>
+  <p><a href="https://telegra.ph/五更百鬼-JK制服-52P-101GB-08-25">五更百鬼 JK制服 [52P-1.01GB]</a></p>
 </body>
 </html>
