--- a/福利姬频道总目录/仙女月全集/menu.html
+++ b/福利姬频道总目录/仙女月全集/menu.html
@@ -12,5 +12,12 @@
   <p><a href="https://telegra.ph/仙女月-粉色内衣-08-25">仙女月 粉色内衣</a></p>
   <p><a href="https://telegra.ph/仙女月-大凤花嫁-08-25">仙女月 大凤花嫁</a></p>
   <p><a href="https://telegra.ph/仙女月-希娜小姐泳装-08-25">仙女月 希娜小姐泳装</a></p>
+  <p><a href="https://telegra.ph/仙女月-大凤纯白婚纱-30P-189MB-08-25">仙女月 大凤纯白婚纱 [30P-189MB]</a></p>
+  <p><a href="https://telegra.ph/仙女月---樱岛麻衣兔女郎-33P-283MB-08-25">仙女月 - 樱岛麻衣兔女郎 [33P-283MB]</a></p>
+  <p><a href="https://telegra.ph/仙女月---喜多川海梦魅魔-16P-29MB-08-25">仙女月 - 喜多川海梦魅魔 [16P-29MB]</a></p>
+  <p><a href="https://telegra.ph/仙女月---喜多川泳装-29P-416MB-08-25">仙女月 - 喜多川泳装 [29P-416MB]</a></p>
+  <p><a href="https://telegra.ph/仙女月-Ivy-原創挿画角色-Astrum-Design-08-25">仙女月 Ivy (原創挿画角色 Astrum Design)</a></p>
+  <p><a href="https://telegra.ph/仙女月-喜多川海梦兔女郎-08-25">仙女月 喜多川海梦兔女郎</a></p>
+
 </body>
 </html>
