--- a/福利姬频道总目录/喵小吉(暴机少女喵小吉)全集/menu.html
+++ b/福利姬频道总目录/喵小吉(暴机少女喵小吉)全集/menu.html
@@ -30,7 +30,25 @@
   <p><a href="https://telegra.ph/喵小吉-镜花水月10月31打赏群资源-08-25">喵小吉 镜花水月（10月31打赏群资源）</a></p>
   <p><a href="https://telegra.ph/小吉的小镇生活10月1打赏群资源-08-25">喵小吉 小吉的小镇生活（10月1打赏群资源）</a></p>
   <p><a href="https://telegra.ph/小吉的暑期补习班10月1打赏群资源-08-25">喵小吉 小吉的暑期补习班（10月1打赏群资源）</a></p>
-
+  <p><a href="https://telegra.ph/喵小吉-T3限定-密室监禁9月1会员资源-08-25">喵小吉 T3限定 密室监禁（9月1会员资源）</a></p>
+  <p><a href="https://telegra.ph/喵小吉-怪物猎人-曙光9月1会员资源-08-25">喵小吉 怪物猎人 曙光（9月1会员资源）</a></p>
+  <p><a href="https://telegra.ph/喵小吉-绮怀9月1会员资源-08-25">喵小吉 绮怀（9月1会员资源）</a></p>
+  <p><a href="https://telegra.ph/小吉的微醺时刻9月1会员资源-08-25">小吉的微醺时刻（9月1会员资源）</a></p>
+  <p><a href="https://telegra.ph/喵小吉-微醺时刻缺-08-25">喵小吉 微醺时刻（缺）</a></p>
+  <p><a href="https://telegra.ph/喵小吉-曙光爵银龙-拟人-缺-08-25">喵小吉 曙光爵银龙 拟人 （缺）</a></p>
+  <p><a href="https://telegra.ph/喵小吉-绮怀-08-25">喵小吉 绮怀</a></p>
+  <p><a href="https://telegra.ph/喵小吉X金鱼-第１弹-双子系列从零开始異世界生活-08-25">喵小吉X金鱼 第１弹 双子系列💕从零开始異世界生活</a></p>
+  <p><a href="https://telegra.ph/私人看护-08-25">喵小吉 私人看护</a></p>
+  <p><a href="https://telegra.ph/双子天竺少女-08-25">titi 钛合金 && 喵小吉  双子：天竺少女</a></p>
+  <p><a href="https://telegra.ph/爆机少女喵小吉-深夜地铁-08-25">爆机少女喵小吉 深夜地铁</a></p>
+  <p><a href="https://telegra.ph/爆机少女喵小吉-风花雪月-98P4V-447G-08-25">爆机少女喵小吉 风花雪月 [98P4V-4.47G]</a></p>
+  <p><a href="https://telegra.ph/爆机少女喵小吉---Fate-stay-night-黑呆-92P-962MB-08-25">爆机少女喵小吉 - Fate stay night 黑呆 [92P-962MB]</a></p>
+  <p><a href="https://telegra.ph/喵小吉---小吉的午后时光-08-25">喵小吉 - 小吉的午后时光</a></p>
+  <p><a href="https://telegra.ph/喵小吉---莱莎的炼金工房27月3会员资源-08-25">喵小吉 - 莱莎的炼金工房2（7月3会员资源）</a></p>
+  <p><a href="https://telegra.ph/喵小吉---间谍过家家-约尔福杰7月1会员资源-08-25">喵小吉 - 间谍过家家-约尔·福杰（7月1会员资源）</a></p>
+  <p><a href="https://telegra.ph/喵小吉---更衣人偶坠入爱河7月3会员资源-08-25">喵小吉 - 更衣人偶坠入爱河（7月3会员资源）</a></p>
+  <p><a href="https://telegra.ph/喵小吉---浣溪沙端午-08-25">喵小吉 - 浣溪沙·端午</a></p>
+  <p><a href="https://telegra.ph/喵小吉---T3限定---猫娘July-03-08-25">喵小吉 - T3限定 - 猫娘 </a></p>
 
 </body>
 </html>
