--- a/福利姬频道总目录/幼愛youmeko全集/menu.html
+++ b/福利姬频道总目录/幼愛youmeko全集/menu.html
@@ -12,5 +12,14 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E5%B9%BC%E6%84%9Byoumeko---%E5%B0%8F%E7%90%AA%E8%88%9E%E8%B1%B9%E5%BC%8F%E8%A3%85%E7%94%B241P8V-127G-08-20">幼愛youmeko - 小琪舞豹式装甲[41P8V-1.27G]</a></p>  
   <p><a href="https://telegra.ph/%E5%B9%BC%E6%84%9Byoumeko---%E5%B0%8F%E7%90%AA%E8%88%9EJK%E5%88%B6%E6%9C%8D-08-20">幼愛youmeko - 小琪舞JK制服</a></p>
+  <p><a href="https://telegra.ph/幼愛youmeko-早安想吃点什么-28P-315MB-08-25">幼愛youmeko 早安,想吃点什么？ [28P-315MB]</a></p>
+  <p><a href="https://telegra.ph/幼愛youmeko-捆绑修女夏洛特9月21会员资源-08-25">幼愛youmeko 捆绑修女夏洛特（9月21会员资源）</a></p>
+  <p><a href="https://telegra.ph/幼愛youmeko-紫流苏旗袍-35P-367MB-08-25">幼愛youmeko 紫流苏旗袍 [35P-367MB]</a></p>
+  <p><a href="https://telegra.ph/幼愛youmeko-未亡人雪女cos-70P-585MB-08-25">幼愛youmeko 未亡人雪女cos [70P-585MB]</a></p>
+  <p><a href="https://telegra.ph/幼愛youmeko-古见硝子-60P-308MB-08-25">幼愛youmeko 古见硝子 [60P-308MB]</a></p>
+  <p><a href="https://telegra.ph/幼愛youmeko-樋口円香竞泳无衬衫灰丝-36P-87MB-08-25">幼愛youmeko 樋口円香竞泳无衬衫灰丝 [36P-87MB]</a></p>
+  <p><a href="https://telegra.ph/幼愛youmeko-樋口円香竞泳灰丝-29P-59MB-08-25">幼愛youmeko 樋口円香竞泳灰丝 [29P-59MB]</a></p>
+  <p><a href="https://telegra.ph/幼愛youmeko-樋口円香灰丝-25P-119MB-08-25">幼愛youmeko 樋口円香灰丝 [25P-119MB]</a></p>
+
 </body>
 </html>
