--- a/福利姬频道总目录/日奈娇全集/menu.html
+++ b/福利姬频道总目录/日奈娇全集/menu.html
@@ -48,8 +48,18 @@
   <p><a href="https://telegra.ph/日奈娇-吉他妹妹-81P-561MB-08-25">日奈娇 吉他妹妹 [81P-561MB]</a></p>
   <p><a href="https://telegra.ph/日奈娇-内普提斯-75P-729MB-08-25">日奈娇 内普提斯 [75P-729MB]</a></p>
   <p><a href="https://telegra.ph/日奈娇-甘雨女仆23P-394M-08-25">日奈娇 甘雨女仆[23P-394M]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/日奈娇-万圣节恶魔-66P-139GB-08-25">日奈娇 万圣节恶魔 [66P-1.39GB]</a></p>
+  <p><a href="https://telegra.ph/日奈娇-网纱死库水--赠品自拍171P175GB-08-25">日奈娇 网纱死库水 – 赠品+自拍(171P1.75GB)</a></p>
+  <p><a href="https://telegra.ph/日奈娇-喜多川海梦女警-08-25">日奈娇 喜多川海梦女警</a></p>
+  <p><a href="https://telegra.ph/日奈娇-孟菲斯-08-25">日奈娇 孟菲斯</a></p>
+  <p><a href="https://telegra.ph/日奈娇-更衣人偶喜多川海梦泳装-65P-216MB-08-25">日奈娇 更衣人偶喜多川海梦泳装 [65P-216MB]</a></p>
+  <p><a href="https://telegra.ph/日奈娇-星空钻石-08-25">日奈娇 星空钻石</a></p>
+  <p><a href="https://telegra.ph/日奈娇-私人秘书-110P-143GBcosplay写真NSFW频道-httpstmedouza-08-25">日奈娇 私人秘书 [110P-1.43GB]cosplay写真[NSFW]频道 </a></p>
+  <p><a href="https://telegra.ph/日奈娇-万圣恶魔皮衣-66P-139GBcosplay写真NSFW频道-httpstmedouza-08-25">日奈娇 万圣恶魔皮衣 [66P-1.39GB]cosplay写真[NSFW]频道 </a></p>
+  <p><a href="https://telegra.ph/日奈娇-透明兔女郎-08-25">日奈娇 透明兔女郎</a></p>
+  <p><a href="https://telegra.ph/日奈娇-口罩护士-08-25">日奈娇 口罩护士</a></p>
+  <p><a href="https://telegra.ph/日奈娇---穹妹-191P-218GB-08-25">日奈娇 - 穹妹 [191P-2.18GB]</a></p>
+  <p><a href="https://telegra.ph/日奈娇---湿身小白裙-97P-106GB-08-25">日奈娇 - 湿身小白裙 [97P-1.06GB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
