--- a/福利姬频道总目录/星之迟迟全集/menu.html
+++ b/福利姬频道总目录/星之迟迟全集/menu.html
@@ -119,5 +119,26 @@
   <p><a href="https://telegra.ph/星之迟迟-9月计划B-莲花JK10月14打赏群资源-08-25">星之迟迟 9月计划B 莲花JK（10月14打赏群资源）</a></p>
   <p><a href="https://telegra.ph/星之迟迟-9月计划A-胡桃死库水10月14打赏群资源-08-25">星之迟迟 9月计划A 胡桃死库水（10月14打赏群资源）</a></p>
   <p><a href="https://telegra.ph/星之迟迟-9月计划C-JK大风10月14打赏群资源-08-25">星之迟迟 9月计划C JK大风（10月14打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-9月计划D-约会OL-136p--1v-08-25">星之迟迟 9月计划D 约会OL 136p + 1v</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-邻家太太-08-25">星之迟迟 邻家太太</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-水蓝小恶魔-08-25">星之迟迟 水蓝小恶魔</a></p>
+  <p><a href="https://telegra.ph/星之迟迟---碧蓝航线-花园-08-25">星之迟迟 - 碧蓝航线 花园</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-FGO--狮子王-08-25">星之迟迟 FGO – 狮子王</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-加藤惠---特典礼服100P1V113GB-08-25">星之迟迟 加藤惠 - 特典礼服(100P1V1.13GB)</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-恶毒8月1会员资源-08-25">星之迟迟 恶毒（8月1会员资源）</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-玛修同人护士-08-25">星之迟迟 玛修同人护士</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-换装竞泳-08-25">星之迟迟 换装竞泳</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-玉藻前舞娘7月30会员资源-08-25">星之迟迟 玉藻前舞娘（7月30会员资源）</a></p>
+  <p><a href="https://telegra.ph/星之迟迟---高扬斯卡娅旗袍20P-149MB-08-25">星之迟迟 - 高扬斯卡娅旗袍[20P-149MB]</a></p>
+  <p><a href="https://telegra.ph/星之迟迟---高扬斯卡娅旗袍20P-149MB-08-25-2">星之迟迟 - 高扬斯卡娅旗袍[20P-149MB]</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-换装竞泳-08-25">星之迟迟 换装竞泳</a></p>
+  <p><a href="https://telegra.ph/星之迟迟---逆兔双子-08-25">星之迟迟 - 逆兔双子</a></p>
+  <p><a href="https://telegra.ph/星之迟迟--可畏旗袍-52P-310MB-08-25">星之迟迟 – 可畏旗袍 52P 310MB</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-日暮-08-25">星之迟迟 日暮</a></p>
+  <p><a href="https://telegra.ph/星之迟迟---朝露-08-25">星之迟迟 - 朝露</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-利兹-08-25">星之迟迟 利兹</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-黑江雫-08-25">星之迟迟 黑江雫</a></p>
+  <p><a href="https://telegra.ph/星之迟迟---豹纹泳衣-24P-91MB-08-25">星之迟迟 - 豹纹泳衣 24P 91MB</a></p>
+
 </body>
 </html>
