--- a/福利姬频道总目录/柒柒不可爱全集/menu.html
+++ b/福利姬频道总目录/柒柒不可爱全集/menu.html
@@ -37,5 +37,9 @@
   <p><a href="https://telegra.ph/柒柒不可爱-夏树繁花-08-24">柒柒不可爱 夏树繁花</a></p>
   <p><a href="https://telegra.ph/柒柒不可爱-少女记实录-76P-127GB-08-25">柒柒不可爱 少女记实录 [76P-1.27GB]</a></p>
   <p><a href="https://telegra.ph/柒柒不可爱-街拍黑皮裙-08-25">柒柒不可爱 街拍黑皮裙</a></p>
+  <p><a href="https://telegra.ph/柒柒不可爱-粉红护士6月10会员资源-08-25">柒柒不可爱 粉红护士（6月10会员资源）</a></p>
+  <p><a href="https://telegra.ph/柒柒不可爱-粉红护士6月10会员资源-08-25">柒柒不可爱 粉红护士（6月10会员资源）</a></p>
+  <p><a href="https://telegra.ph/柒柒不可爱--晚间约会617会员资源-08-25">柒柒不可爱 – 晚间约会（6.17会员资源）</a></p>
+
 </body>
 </html>
