--- a/福利姬频道总目录/桜桃喵全集/menu.html
+++ b/福利姬频道总目录/桜桃喵全集/menu.html
@@ -47,5 +47,13 @@
   <p><a href="https://telegra.ph/桜桃喵-长发蕾姆02-44P-684MB-08-25">桜桃喵 长发蕾姆02 [44P-684MB]</a></p>
   <p><a href="https://telegra.ph/桜桃喵-长发蕾姆01-45P-685MB-08-25">桜桃喵 长发蕾姆01 [45P-685MB]</a></p>
   <p><a href="https://telegra.ph/桜桃喵-约尔8月19会员资源cosplay写真NSFW频道-httpstmedouza-08-25">桜桃喵 约尔（8月19会员资源）cosplay写真[NSFW]频道 https://t.me/douza</a></p>
+  <p><a href="https://telegra.ph/桜桃喵---钻石-19P-366MB-08-25">桜桃喵 - 钻石 [19P-366MB]</a></p>
+  <p><a href="https://telegra.ph/桜桃喵-神里凌华9月5会员资源-08-25">桜桃喵 神里凌华（9月5会员资源）</a></p>
+  <p><a href="https://telegra.ph/桜桃喵-沉溺8月6会员资源-08-25">桜桃喵 沉溺（8月6会员资源）</a></p>
+  <p><a href="https://telegra.ph/桜桃喵-沉溺8月6会员资源-08-25">桜桃喵 沉溺（8月6会员资源）</a></p>
+  <p><a href="https://telegra.ph/桜桃喵---狼崽崽612会员资源-08-25">桜桃喵 - 狼崽崽（6.12会员资源）</a></p>
+  <p><a href="https://telegra.ph/桜桃喵---狼来了02612会员资源-08-25">桜桃喵 - 狼来了02（6.12会员资源）</a></p>
+  <p><a href="https://telegra.ph/桜桃喵---狼来了01612会员资源-08-25">桜桃喵 - 狼来了01（6.12会员资源）</a></p>
+
 </body>
 </html>
