--- a/福利姬频道总目录/水淼aqua全集/menu.html
+++ b/福利姬频道总目录/水淼aqua全集/menu.html
@@ -90,5 +90,11 @@
   <p><a href="https://telegra.ph/水淼Aqua---梅比乌斯-08-25">水淼Aqua - 梅比乌斯</a></p>
   <p><a href="https://telegra.ph/水淼Aqua---Aponia-08-25">水淼Aqua - Aponia</a></p>
   <p><a href="https://telegra.ph/水淼Aqua---原神-莫娜-08-25">水淼Aqua - 原神 莫娜</a></p>
+  <p><a href="https://telegra.ph/水淼-约尔-08-25">水淼 约尔</a></p>
+  <p><a href="https://telegra.ph/水淼-夜兰8月25会员资源cosplay写真NSFW频道-httpstmedouza-08-25">水淼 夜兰（8月25会员资源）cosplay写真[NSFW]</a></p>
+  <p><a href="https://telegra.ph/水淼-吉他妹妹52p8月16会员资源cosplay写真NSFW频道-httpstmedouza-08-25">水淼 吉他妹妹(52p)（8月16会员资源）cosplay写真[NSFW]</a></p>
+  <p><a href="https://telegra.ph/水淼Aqua---鬼灭之刃-上弦陆堕姬-83P-99MB-08-25">水淼Aqua - 鬼灭之刃 上弦陆堕姬 [83P-99MB]</a></p>
+  <p><a href="https://telegra.ph/水淼Aqua-时崎狂三-08-25">水淼Aqua 时崎狂三</a></p>
+
 </body>
 </html>
