--- a/福利姬频道总目录/焖焖碳全集/menu.html
+++ b/福利姬频道总目录/焖焖碳全集/menu.html
@@ -32,6 +32,9 @@
   <p><a href="https://telegra.ph/焖焖碳-碧蓝航线-長門睡衣-27P-88MB-08-25">焖焖碳 碧蓝航线 長門睡衣 [27P-88MB]</a></p>
   <p><a href="https://telegra.ph/焖焖碳-麻衣学姐-兔女郎-08-25">焖焖碳 麻衣学姐 兔女郎</a></p>
   <p><a href="https://telegra.ph/焖焖碳-女仆-08-25">焖焖碳 女仆</a></p>
-
+  <p><a href="https://telegra.ph/焖焖碳Xtomoyo酱-埃姆登黑白夜之主9月19会员资源-08-25">焖焖碳Xtomoyo酱 埃姆登黑白夜之主（9月19会员资源）</a></p>
+  <p><a href="https://telegra.ph/焖焖碳-小天鹅女仆-30P125MB-08-25">焖焖碳 小天鹅女仆 [30P125MB]</a></p>
+  <p><a href="https://telegra.ph/焖焖碳-恶毒-22P34MB-08-25">焖焖碳 恶毒 [22P34MB]</a></p>
+  <p><a href="https://telegra.ph/焖焖碳-saber旗袍-28P192MB-08-25">焖焖碳 saber旗袍 [28P192MB]</a></p>
 </body>
 </html>
