--- a/福利姬频道总目录/疯猫ss全集/menu.html
+++ b/福利姬频道总目录/疯猫ss全集/menu.html
@@ -38,5 +38,16 @@
   <p><a href="https://telegra.ph/疯猫-08-25-2">疯猫</a></p>
   <p><a href="https://telegra.ph/疯猫-小僵尸-08-25">疯猫 小僵尸</a></p>
   <p><a href="https://telegra.ph/疯猫-背带牛仔裤-08-25">疯猫 背带牛仔裤</a></p>
+  <p><a href="https://telegra.ph/疯猫-赛博少女-40P-812MB-08-25">疯猫 赛博少女 [40P-812MB]</a></p>
+  <p><a href="https://telegra.ph/疯猫-08-25-3">疯猫 夏日限定 B本 黑旗袍短本(2022) 20</a></p>
+  <p><a href="https://telegra.ph/疯猫-08-25-4">疯猫 夏日限定 B本 黑旗袍长本(2022) 19</a></p>
+  <p><a href="https://telegra.ph/疯猫-08-25-5">疯猫 夏日限定 B本 热裤肉本(2022) 18</a></p>
+  <p><a href="https://telegra.ph/疯猫-08-25-6">疯猫 夏日限定 B本 套头毛衣本(2022) 17</a></p>
+  <p><a href="https://telegra.ph/疯猫-08-25-7">疯猫 夏日限定 B本 破碎半袖本(2022) 16</a></p>
+  <p><a href="https://telegra.ph/疯猫-08-25-8">疯猫 夏日限定 B本 奶牛油光本(2022) 15</a></p>
+  <p><a href="https://telegra.ph/疯猫-08-25-9">疯猫 夏日限定 B本 OL本(2022) 14</a></p>
+  <p><a href="https://telegra.ph/疯猫-08-25-10">疯猫 夏日限定 B本 白衬衫黑s本(2022) 13</a></p>
+  <p><a href="https://telegra.ph/%E7%96%AF%E7%8C%AB-%E5%A4%8F%E6%97%A5%E9%99%90%E5%AE%9A-B%E6%9C%AC-%E9%BB%91%E6%97%97%E8%A2%8D%E9%95%BF%E6%9C%AC2022-12-08-25">疯猫 夏日限定 B本 制服本(2022) 12</a></p>
+  <p><a href="https://telegra.ph/疯猫-08-25-11">疯猫 夏日限定 B本 女仆本(2022) 11</a></p>
 </body>
 </html>
