--- a/福利姬频道总目录/秋和柯基全集/menu.html
+++ b/福利姬频道总目录/秋和柯基全集/menu.html
@@ -18,5 +18,8 @@
   <p><a href="https://telegra.ph/秋和柯基---蝴蝶夫人61P1V12G-08-25">秋和柯基 - 蝴蝶夫人[61P1V1.2G]</a></p>
   <p><a href="https://telegra.ph/秋和柯基夏小秋秋秋---雀斑少女-34P-465MB-08-25">秋和柯基(夏小秋秋秋) - 雀斑少女 [34P-465MB]</a></p>
   <p><a href="https://telegra.ph/秋和柯基-小红帽-52P-347MB-08-25">秋和柯基 小红帽 [52P-347MB]</a></p>
+  <p><a href="https://telegra.ph/秋和柯基-专属护士-08-25">秋和柯基 专属护士</a></p>
+  <p><a href="https://telegra.ph/秋和柯基-奶桃桃-电车-08-25">秋和柯基 奶桃桃 电车</a></p>
+  <p><a href="https://telegra.ph/秋和柯基-莉莉丝-08-25">秋和柯基 莉莉丝</a></p>
 </body>
 </html>
