--- a/福利姬频道总目录/虎森森全集/menu.html
+++ b/福利姬频道总目录/虎森森全集/menu.html
@@ -23,7 +23,8 @@
   <p><a href="https://telegra.ph/虎森森---Leather-Queen-08-25">虎森森 - Leather Queen</a></p>
   <p><a href="https://telegra.ph/虎森森-刹那-40P-95MB-08-25">虎森森 刹那 [40P-95MB]</a></p>
   <p><a href="https://telegra.ph/虎森森-莉莉娅-65P-302MB-08-25">虎森森 莉莉娅 [65P-302MB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/虎森森-战损死库水-30P-267MB-08-25">虎森森 战损死库水 [30P-267MB]</a></p>
+  <p><a href="https://telegra.ph/虎森森-金钱兔兔cosplay写真NSFW频道-httpstmedouza-08-25">虎森森 金钱兔兔cosplay写真[NSFW]频道 https://t.me/douza</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
