--- a/福利姬频道总目录/蜜汁猫裘全集/menu.html
+++ b/福利姬频道总目录/蜜汁猫裘全集/menu.html
@@ -36,5 +36,11 @@
   <p><a href="https://telegra.ph/蜜汁猫裘-足球宝贝12月29打赏群资源-08-25">蜜汁猫裘 足球宝贝（12月29打赏群资源）</a></p>
   <p><a href="https://telegra.ph/蜜汁猫裘-高叉女仆11月23打赏群资源-08-25">蜜汁猫裘 高叉女仆（11月23打赏群资源）</a></p>
   <p><a href="https://telegra.ph/蜜汁猫裘-逆兔7月12会员资源cosplay写真NSFW频道-httpstmedouza-08-25">蜜汁猫裘 逆兔（7月12会员资源）cosplay写真[NSFW]频道 https://t.me/douza</a></p>
+  <p><a href="https://telegra.ph/蜜汁猫裘-恶毒上司-文字剧情版8月8会员资源-08-25">蜜汁猫裘 恶毒上司 文字剧情版（8月8会员资源）</a></p>
+  <p><a href="https://telegra.ph/蜜汁猫裘-恶毒上司8月8会员资源-08-25">蜜汁猫裘 恶毒上司（8月8会员资源）</a></p>
+  <p><a href="https://telegra.ph/蜜汁猫裘---奶牛-50P-880MB-08-25">蜜汁猫裘 - 奶牛 [50P-880MB]</a></p>
+  <p><a href="https://telegra.ph/蜜汁猫裘-蓝baby7月6会员资源-08-25">蜜汁猫裘 蓝baby（7月6会员资源）</a></p>
+  <p><a href="https://telegra.ph/蜜汁猫裘--可畏巫女-50P-4V-228GB-08-25">蜜汁猫裘 – 可畏巫女 50P 4V 2.28GB</a></p>
+
 </body>
 </html>
