--- a/福利姬频道总目录/钛合金TiTi全集/menu.html
+++ b/福利姬频道总目录/钛合金TiTi全集/menu.html
@@ -9,7 +9,12 @@
 	<p><a href="../index.html">返回当前频道总目录</a></p>
   </div>
   <hr>
-  <p><a href="../index.html">返回总目录</a></p>
+
   <p><a href="https://telegra.ph/%E9%92%9B%E5%90%88%E9%87%91TiTi---%E9%BB%91%E7%A5%9E%E8%AF%9D%E6%82%9F%E7%A9%BA-%E9%93%81%E6%89%87%E5%85%AC%E4%B8%BB-08-19">钛合金TiTi - 黑神话悟空 铁扇公主</a></p> 
+  <p><a href="https://telegra.ph/titi---侠客-08-25">titi 钛合金 - 侠客</a></p>
+  <p><a href="https://telegra.ph/titi---画中仙-08-25">titi 钛合金 - 画中仙</a></p>
+  <p><a href="https://telegra.ph/鬼灭之刃-恋柱-08-25">titi 钛合金 鬼灭之刃 恋柱</a></p>
+  <p><a href="https://telegra.ph/titi---风玲公主-08-25">titi 钛合金 - 风玲公主</a></p>
+  <p><a href="https://telegra.ph/titi---雏田-08-25">titi 钛合金 - 雏田</a></p>
 </body>
 </html>
