--- a/福利姬频道总目录/阿包也是兔娘全集/menu.html
+++ b/福利姬频道总目录/阿包也是兔娘全集/menu.html
@@ -50,7 +50,15 @@
   <p><a href="https://telegra.ph/阿包-兔兔-08-25">阿包 兔兔</a></p>
   <p><a href="https://telegra.ph/阿包也是兔娘---Kuuka-08-25">阿包也是兔娘 - Kuuka</a></p>
   <p><a href="https://telegra.ph/阿包也是兔娘-女仆-bb酱-08-25">阿包也是兔娘 女仆 bb酱</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E9%98%BF%E5%8C%85%E4%B9%9F%E6%98%AF%E5%85%94%E5%A8%98-3%E6%9C%88%E8%88%B0%E9%95%BF---%E5%B4%94%E6%96%AF%E5%9D%A6%E4%BA%8C%E7%A0%B4-36P-486MB6%E6%9C%8828%E4%BC%9A%E5%91%98%E8%B5%84%E6%BA%90-08-25">阿包也是兔娘 3月舰长 - 崔斯坦二破 36P 486MB（6月28会员资源）</a></p>
+  <p><a href="https://telegra.ph/阿包也是兔娘---碧蓝幻想古蕾娅-龙娘-35P-381MB-08-25">阿包也是兔娘 - 碧蓝幻想古蕾娅 龙娘 [35P-381MB]</a></p>
+  <p><a href="https://telegra.ph/阿包也是兔娘-中华娘-22P-470-MB-08-25">阿包也是兔娘 中华娘 22P 470 MB</a></p>
+  <p><a href="https://telegra.ph/阿包也是兔娘---生日图7月17会员资源-08-25">阿包也是兔娘 - 生日图（7月17会员资源）</a></p>
+  <p><a href="https://telegra.ph/阿包也是兔娘-4月舰长---明日香-27P-463MB6月28会员资源-08-25">阿包也是兔娘 4月舰长 - 明日香 27P 463MB（6月28会员资源）</a></p>
+  <p><a href="https://telegra.ph/阿包也是兔娘--06月舰长-明日方舟-森蚺-33P507MB-08-25">阿包也是兔娘 -06月舰长 明日方舟 森蚺 [33P+507MB]</a></p>
+  <p><a href="https://telegra.ph/阿包也是兔娘-1月舰长---能代女仆-23P-402MB6月28会员资源-08-25">阿包也是兔娘 1月舰长 - 能代女仆 23P 402MB（6月28会员资源）</a></p>
+  <p><a href="https://telegra.ph/阿包也是兔娘--魔女40P760MB-08-25">阿包也是兔娘 – 魔女(40P760MB)</a></p>
+  <p><a href="https://telegra.ph/阿包也是兔娘--莫娜女仆36P1V626MB-08-25">阿包也是兔娘 – 莫娜女仆(36P1V626MB)</a></p>
+  <p><a href="https://telegra.ph/阿包也是兔娘---原神皇女-53P-454MB-08-25">阿包也是兔娘 - 原神皇女 [53P-454MB]</a></p>
 </body>
 </html>
