--- a/福利姬频道总目录/LLS_莉莉丝全集/menu.html
+++ b/福利姬频道总目录/LLS_莉莉丝全集/menu.html
@@ -10,7 +10,7 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/LLS-%E8%8E%89%E8%8E%89%E4%B8%9D-%E5%A4%9C%E5%85%B0-40P-03-21">LLS_莉莉丝 夜兰 40P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/秋和柯基-莉莉丝-08-25">秋和柯基 莉莉丝</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
