--- a/福利姬频道总目录/byoru全集/menu.html
+++ b/福利姬频道总目录/byoru全集/menu.html
@@ -68,6 +68,23 @@
   <p><a href="https://telegra.ph/Byoru---Natigaru-56P-248MB-08-25">Byoru - Natigaru [56P-248MB]</a></p>
   <p><a href="https://telegra.ph/Byoru---Gawr-Gura-91P-147MB-08-25">Byoru - Gawr Gura [91P-147MB]</a></p>
   <p><a href="https://telegra.ph/Byoru---Tifa-08-25">Byoru - Tifa</a></p>
-
+  <p><a href="https://telegra.ph/Byoru---Aeolian-35P-105MB-08-25">Byoru - Aeolian [35P-105MB]</a></p>
+  <p><a href="https://telegra.ph/Byoru---Chiyo-25P-162MB-08-25">Byoru - Chiyo [25P-162MB]</a></p>
+  <p><a href="https://telegra.ph/Byoru---Marie-Rose-Bomber-28P-300MB-08-25">Byoru - Marie Rose Bomber [28P-300MB]</a></p>
+  <p><a href="https://telegra.ph/Byoru---Nyotengu-Dark-Prison-ver-20P-182MB-08-25">Byoru - Nyotengu Dark Prison ver [20P-182MB]</a></p>
+  <p><a href="https://telegra.ph/Byoru-Pack-Miss-Hina-08-25">Byoru Pack Miss Hina</a></p>
+  <p><a href="https://telegra.ph/Byoru---Sakamata-Chloe-90P1V-158GB-08-25">Byoru - Sakamata Chloe [90P1V-1.58GB]</a></p>
+  <p><a href="https://telegra.ph/Byoru---Houshou-Marine-Hololive-Summer-28P-55MB-08-25">Byoru - Houshou Marine Hololive Summer [28P-55MB]</a></p>
+  <p><a href="https://telegra.ph/Byoru---Houshou-Marine-Hololive-08-25">Byoru - Houshou Marine (Hololive)</a></p>
+  <p><a href="https://telegra.ph/Byoru---Marin-Kitagawa-70P1V-867MB-08-25">Byoru - Marin Kitagawa [70P1V-867MB]</a></p>
+  <p><a href="https://telegra.ph/Misaki-seashell-bikini-HD5月31会员资源-08-25">Byoru Misaki seashell bikini HD（5月31会员资源）</a></p>
+  <p><a href="https://telegra.ph/Byoru---Gura-Selfies-38P-64MB-08-25">Byoru - Gura Selfies [38P-64MB]</a></p>
+  <p><a href="https://telegra.ph/Byoru-Pack-Yumemi-Riamu-Neko-08-25">Byoru Pack Yumemi Riamu Neko</a></p>
+  <p><a href="https://telegra.ph/Byoru---Pack-Leviathan-08-25">Byoru - Pack Leviathan</a></p>
+  <p><a href="https://telegra.ph/Byoru---Futaba-Sakura-59P7V-483MB-08-25">Byoru - Futaba Sakura [59P7V-483MB]</a></p>
+  <p><a href="https://telegra.ph/Byoru---Rosaria-33P-88MB-08-25">Byoru - Rosaria [33P-88MB]</a></p>
+  <p><a href="https://telegra.ph/Byoru---Yor-Forger-68P10V-149GB-08-25">Byoru - Yor Forger [68P10V-1.49GB]</a></p>
+  <p><a href="https://telegra.ph/Byoru---Rizu-kyun-44P9V-134GB-08-25">Byoru - Rizu-kyun [44P9V-1.34GB]</a></p>
+  <p><a href="https://telegra.ph/Byoru---Misaki-Charm-Witch-Dead-or-Alive-08-25">Byoru - Misaki Charm Witch (Dead or Alive)</a></p>
 </body>
 </html>
