--- a/福利姬频道总目录/七月喵子全集/menu.html
+++ b/福利姬频道总目录/七月喵子全集/menu.html
@@ -30,7 +30,9 @@
   <p><a href="https://telegra.ph/七月喵子-幻想兽娘集日食-伊卡-22P-226MB-08-25">七月喵子 幻想兽娘集日食 伊卡 [22P-226MB]</a></p>
   <p><a href="https://telegra.ph/七月喵子-幻想兽娘集日食-牙牙-26P-271MB-08-25">七月喵子 幻想兽娘集日食 牙牙 [26P-271MB]</a></p>
   <p><a href="https://telegra.ph/七月喵子-幻想兽娘集月食-波克塔耶子-25P-302MB-08-25">七月喵子 幻想兽娘集月食 波克塔耶子 [25P-302MB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/七月喵子-透明-灰撕袜-45P-448MB-08-25">七月喵子 透明 灰撕袜 [45P-448MB]</a></p>
+  <p><a href="https://telegra.ph/七月喵子-漏网之鱼10月6打赏群资源-08-25">七月喵子 漏网之鱼（10月6打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/%E4%B8%83%E6%9C%88%E5%96%B5%E5%AD%90-%E5%9B%9E%E5%AE%B6%E7%9A%84%E8%AF%B1%E6%83%91-08-25">七月喵子 回家的诱惑</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
