--- a/福利姬频道总目录/安食Ajiki全集/menu.html
+++ b/福利姬频道总目录/安食Ajiki全集/menu.html
@@ -15,6 +15,10 @@
   <p><a href="https://telegra.ph/%E5%AE%89%E9%A3%9FAjiki-%E7%99%BD%E7%8C%AB%E7%8C%AB-48P-08-22">安食Ajiki 白猫猫 48P</a></p>
   <p><a href="https://telegra.ph/%E5%AE%89%E9%A3%9FAjiki-%E5%8E%9F%E7%A5%9E-%E9%9B%B7%E7%94%B5%E5%B0%86%E5%86%9B%E9%AD%85%E9%AD%94-35P-259M-08-23">安食Ajiki 原神 雷电将军魅魔 [35P-259M]</a></p>
   <p><a href="https://telegra.ph/%E5%AE%89%E9%A3%9FAjiki-%E5%8E%9F%E7%A5%9E-%E7%94%98%E9%9B%A8-48P-874MB-08-23">安食Ajiki 原神 甘雨 [48P-874MB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/安食Ajiki-笨拙的小恶魔-41P-111GB-08-25">安食Ajiki 笨拙的小恶魔 [41P-1.11GB]</a></p>
+  <p><a href="https://telegra.ph/安食Ajiki-死之宫环奈-08-25">安食Ajiki 死之宫环奈</a></p>
+  <p><a href="https://telegra.ph/安食Ajiki-修女-25P-098GB-08-25">安食Ajiki 修女 [25P-0.98GB]</a></p>
+  <p><a href="https://telegra.ph/安食AJIKI-黄豆粉-08-25">安食AJIKI 黄豆粉</a></p>
+  <p><a href="https://telegra.ph/安食AJIKI-风纪委员-08-25">安食AJIKI 风纪委员</a></p>
 </body>
 </html>
