--- a/福利姬频道总目录/紧急企划全集/menu.html
+++ b/福利姬频道总目录/紧急企划全集/menu.html
@@ -19,8 +19,13 @@
   <p><a href="https://telegra.ph/%E7%B4%A7%E6%80%A5%E4%BC%81%E5%88%92-%E5%B0%8F%E6%81%A9-%E6%8D%86%E7%BB%91-R18-08-23">紧急企划 小恩 捆绑 R18</a></p>  
   <p><a href="https://telegra.ph/紧急企划-EX-011-见希w-08-25">紧急企划 EX-011 见希w</a></p>
   <p><a href="https://telegra.ph/紧急企划-EX-010-见希w-51P1V-176GB-08-25">紧急企划 EX-010 见希w [51P1V-1.76GB]</a></p> 
-  <p><a href="../index.html">返回总目录</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="https://telegra.ph/紧急企划---EX-009-见希w-51P-098GB-08-25">紧急企划 - EX-009 见希w [51P-0.98GB]</a></p>
+  <p><a href="https://telegra.ph/紧急企划-一只喵喵梓-车内白丝-88P1V-404GB-08-25">紧急企划 一只喵喵梓 车内白丝 [88P1V-4.04GB]</a></p>
+  <p><a href="https://telegra.ph/紧急企划---EX008-08-25">紧急企划 - EX008</a></p>
+  <p><a href="https://telegra.ph/紧急企划---EX-007-见希w-民国制服-白丝-88P1V-345GB-08-25-2">紧急企划 - EX-007 见希w 民国制服 白丝 [88P1V-3.45GB]</a></p>
+  <p><a href="https://telegra.ph/紧急企划---EX-005-79P1V33G-08-25">紧急企划 - EX-005 [79P1V3.3G]</a></p>
+  <p><a href="https://telegra.ph/紧急企划---EX-003-见希w-46P-104GB-08-25">紧急企划 - EX-003 见希w [46P-1.04GB]</a></p>
+  <p><a href="https://telegra.ph/紧急企划---EX-004-见希w-77P1V-350GB-08-25">紧急企划 - EX-004 见希w [77P1V-3.50GB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>  
 </body>
 </html>
