--- a/福利姬频道总目录/麻花酱全集/menu.html
+++ b/福利姬频道总目录/麻花酱全集/menu.html
@@ -51,6 +51,9 @@
   <p><a href="https://telegra.ph/Makachan-麻花麻花酱---Memphis-Halloween-Azur-Lane-08-25">Makachan 麻花麻花酱 - Memphis Halloween (Azur Lane)</a></p>
   <p><a href="https://telegra.ph/麻花酱---镇海-08-25">麻花酱 - 镇海</a></p>
   <p><a href="https://telegra.ph/麻花酱---黑白婚纱-08-25">麻花酱 - 黑白婚纱</a></p>
-
+  <p><a href="https://telegra.ph/麻花麻花酱-透明兔女郎-08-25">麻花麻花酱 透明兔女郎</a></p>
+  <p><a href="https://telegra.ph/麻花酱---紫色透明泳装-08-25">麻花酱 - 紫色透明泳装</a></p>
+  <p><a href="https://telegra.ph/麻花酱---粉白竞泳-08-25">麻花酱 - 粉白竞泳</a></p>
+  <p><a href="https://telegra.ph/麻花酱---小老虎-49P-306MB-08-25">麻花酱 - 小老虎 [49P-306MB]</a></p>
 </body>
 </html>
